[FIX] stock_by_warehouse: Scrollbar bug on stock_by_warehouse widget
- Scrollbar fixed on the stock_by_warehouse_sale widget creating and adding
  the class .stock-by-warehouse-widget to the scss file and the template.xml:
  When there was several warehouses for a product, the widget wasn't working
  correctly and was not showing the scrollbar to check the full list of the
  stock.

--- a/stock_by_warehouse/static/src/scss/main.scss
+++ b/stock_by_warehouse/static/src/scss/main.scss
@@ -1,3 +1,9 @@
 .js_product_warehouse, .js_available_info{
     cursor: pointer;
 }
+
+.popover-body.stock-by-warehouse-widget{
+    overflow: auto;
+    max-height: 400px;
+    padding: 0px;
+}
